// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HighlightText should highlight the searchHint part of the text provided 1`] = `
<DocumentFragment>
  This is 
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    s
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    o
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    m
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    e
  </span>
   text
</DocumentFragment>
`;

exports[`HighlightText should highlight the searchHint part of the text provided regardless of case 1`] = `
<DocumentFragment>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    T
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    h
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    i
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    s
  </span>
   is some text
</DocumentFragment>
`;

exports[`HighlightText should highlight the searchHint part of the text provided when the highlight occurs in the middle of the searchHint text 1`] = `
<DocumentFragment>
  This is a 
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    s
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    o
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    m
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    e
  </span>
  what short text
</DocumentFragment>
`;

exports[`HighlightText should highlight the searchHint part of the text provided when there are parentheses 1`] = `
<DocumentFragment>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    (
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    T
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    h
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    i
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
    s
  </span>
  .c0 {
  font-weight: 600;
}

<span
    class="c0"
  >
     
  </span>
  is) some text
</DocumentFragment>
`;
